# idflow

./: .gitignore  ARCHITECTURE_OVERVIEW.md  CHANGED_FILES_REVIEW.md  CHANGELOG.md  LICENSE  Makefile  PUBLISHING.md  README.md  README_ORM.md  README_REQUIREMENTS.md  README_dev.md  WORKER_FRAMEWORK_DOCUMENTATION.md  WORKFLOW_MANAGEMENT.md  __main__.py  app.py  idflow.py  pyproject.toml  pyproject.toml.backup
.github/workflows/: generate-conductor-images.yml  publish.yml  version-bump.yml
cli/doc/: __init__.py  add.py  drop.py  drop_all.py  list.py  modify.py  set_status.py
conductor/: Dockerfile.sqlite  Dockerfile.src  README-baker.md  baker.py  build-settings.yml
conductor/config/: config-sqlite.properties
conductor/sqlite/: Dockerfile
conductor/ui/: Dockerfile
config/: idflow.yml.example
core/: filters.py  models.py  vendor.py
data/active/ccbaa1fb-21dd-4c38-a859-d52be4e1cef7/: doc.md
data/inbox/2024f670-3772-4a73-8052-7e92514dcfc7/: doc.md
data/inbox/25ac09d3-c0bc-47a6-b383-7d5d7319d3bc/: doc.md
data/inbox/505f7f10-d160-4572-bcbe-cdc399cc0b97/: doc.md
data/inbox/7d49f5eb-91ae-42c1-ba4a-8e00277176dd/: doc.md
data/inbox/a04b870f-10e5-4244-9db6-98f463e06425/: doc.md
docs/: CLI.md  FINAL_STRUCTURE.md  PUBLISHING.md  README.md  README_REQUIREMENTS.md  README_RESEARCH_FEATURES.md  TASK_MANAGEMENT.md  VENDOR_SYSTEM.md  VERSION_MANAGEMENT.md  WORKFLOW_MANAGEMENT.md
examples/: orm_usage.py  requirements_example.py
idflow/: __init__.py  __main__.py  app.py
idflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
idflow/cli/: common.py  init.py
idflow/cli/doc/: __init__.py  add.py  drop.py  drop_all.py  list.py  locate.py  modify.py  set_status.py  show.py
idflow/cli/extras/: __init__.py
idflow/cli/features/: __init__.py
idflow/cli/stage/: __init__.py  evaluate.py  list.py  run.py
idflow/cli/tasks/: __init__.py  list.py  purge.py  upload.py
idflow/cli/worker/: __init__.py  worker.py
idflow/cli/workflow/: __init__.py  list.py  prune.py  upload.py
idflow/core/: conductor_client.py  config.py  discovery.py  document.py  document_factory.py  fs_markdown.py  io.py  models.py  optional_deps.py  props.py  repo.py  resource_resolver.py  stage.py  stage_definitions.py  vendor.py  vendor_registry.py  workflow_manager.py
idflow/stages/: core.yml  create_blog_post_draft.yml  generate_blog_post.yml  research_blog_post_ideas.yml
idflow/tasks/build_dynamic_subworkflow/: build_dynamic_subworkflow.py
idflow/tasks/create_blog_post_draft/: create_blog_post_draft.py
idflow/tasks/duckduckgo_serp/: duckduckgo_serp.py
idflow/tasks/gpt_researcher/: gpt_researcher.py
idflow/tasks/llm_text_complete/: llm_text_complete.py  test_llm_text_complete.py
idflow/tasks/persist_stage_sub_wf_result/: __init__.py  persist_stage_sub_wf_result.py
idflow/tasks/prepare_stage_subworkflows/: __init__.py  prepare_stage_subworkflows.py
idflow/tasks/stage_evaluation/: __init__.py  stage_evaluation.py
idflow/tasks/update_stage_status/: __init__.py  update_stage_status.py
idflow/templates/project/: .gitignore  README.md  pyproject.toml
idflow/templates/project/config/: idflow.yml
idflow/templates/project/config/extras.d/: extras.toml
idflow/templates/project/config/vendors.d/: email_bot.toml
idflow/workflows/create_blog_post_draft/: create_blog_post_draft.json
idflow/workflows/duckduckgo_serp/: duckduckgo_serp.json
idflow/workflows/gpt_researcher/: gpt_researcher.json
idflow/workflows/no_op/: no_op.json
idflow/workflows/research_blog_post_ideas/: research_blog_post_ideas.json
idflow/workflows/stage_evaluation_trigger/: stage_evaluation_trigger.json
idflow/workflows/stage_workflow/: event_handlers.json  stage_workflow.json
idflow/workflows/sub_workflow_1/: sub_workflow_1.json
idflow/workflows/sub_workflow_2/: sub_workflow_2.json
idflow/workflows/trigger/: event_handlers.json  trigger.json
idflow/workflows/wrap_stage_subworkflow/: wrap_stage_subworkflow.json
scripts/: publish.py  version.py
tasks/keyword_extract/: README_keyword_extract.md  __init__.py  keyword_extract.py  test_keyword_extract.py
tasks/llm_text_complete/: README_testing.md
tests/: README.md  conftest.py  test_add.py  test_cli_docs.py  test_cli_integration.py  test_cli_vendor.py  test_document_factory.py  test_integration_workflow.py  test_orm_status_change.py  test_prepare_stage_subworkflows.py  test_smart_save.py  test_stage_evaluation.py  test_stages.py  test_status_change_integration.py  test_worker_management.py  test_workflow_management.py
