[project]
name = "idflow"
version = "0.1.0"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "PyYAML>=6",
  "conductor-python",
  "litellm>=1.0.0",
  "keybert>=0.9.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0"
]

[project.scripts]
idflow = "idflow.app:run"

# TODO: clarify what it does exactly, and prevent "vendor/" folder
[tool.setuptools.packages.find]
include = ["idflow*"]

[tool.setuptools.package-data]
idflow = ["vendor/**/*"]
# TODO: end of clarification

# for plugins:
# [project.entry-points."idflow.commands"]
# myplugin = "idflow_myplugin:app"

[tool.pytest.ini_options]
testpaths = ["tests", "tasks"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]

