[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "ID Flow project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "idflow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]


